--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,9 +39,15 @@ h1{
   max-width: 1200px;
   margin: 0px auto;
   padding: 15px 15px;
-  background-image: url('../../images/bar.png'), url('../../images/bar.png'), url('../../images/bar.png');
-  background-repeat: repeat-y, repeat-y, repeat-y;
-  background-position: 1% top, 50% top, 99% top;
+  background-image: url('../../images/bar.png'),
+                    url('../../images/bar.png'),
+                    url('../../images/bar.png'),
+                    url('../../images/bar.png'),
+                    url('../../images/bar.png');
+  background-repeat: repeat-y;
+  background-position: 1% top, 25% top, 50% top, 75% top, 99% top;
+  background-attachment: scroll;
+  background-size: auto;
 }
 .hero-section{
   text-align: center;
@@ -98,6 +104,20 @@ h1{
     margin: 0 auto;
     .counter{
       display: inline-block;
+      font-size: 34px;
+      font-weight: 900;
+      color: #555;
+      position: relative;
+      opacity: 0.2;
+      line-height: 0;
+      padding-left: 30px;
+      &:after{
+        content: attr(data-content);
+        position: absolute;
+        left: 0;
+        top: 0px;
+        font-size: 20px;
+      }
     }
     .image-name{
       display: inline-block;
@@ -115,6 +135,33 @@ h1{
         opacity: 1;
         box-shadow: 0px 20px 40px 0 rgba(17, 20, 25, 0.40);
         @include transition(0.2s);
+      }
+    }
+  }
+}
+#fullScreenModal{
+  background: $text-color;
+
+  .modal-dialog{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    .modal-content{
+      border-radius: 0;
+      background: inherit;
+      padding: 50px 15px 0;
+      box-shadow: none;
+      border: none;
+      color: $background-color;
+      img{
+        margin: 25px auto;
+        box-shadow: 0 25px 50px 0 #000000;
+      }
+      a.back-link{
+        color: $background-color;
+        font-size: 16px;
+        font-weight: 700;
+        text-decoration: underline;
       }
     }
   }
