--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,6 +68,7 @@ h1{
     margin: 15px 0 10px;
     @media screen and (min-width: 768px) {
       float: right;
+      margin: 20px 0 10px;
     }
   }
   .intro-section{
